# GLUE3D

./: .gitmodules  README.md  pyproject.toml
.github/workflows/: python-publish.yml
docker_images/: README.md
docker_images/llava3d/: Dockerfile  requirements.txt
docker_images/phi3_vision/: Dockerfile
docker_images/vicuna/: Dockerfile  requirements.txt
glue3d/: data.py  evaluate_answers.py  generate_answers.py  main.py
glue3d/evaluators/: base.py  loaders.py  misc.py  qwen3.py
glue3d/models/: hf.py  shapellm.py
notebooks/: example-pointllm.ipynb  example-qwen2_vl.ipynb
scripts/: build_images.sh  run_generation.sh  run_notebook.sh
tests/: test_evaluation.py  test_generation.py
