[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "glue3d"
requires-python = ">= 3.10"
version = "0.2.3"
description = "Official project for GLUE3D."
authors = [{name="Giorgio Mariani", email="giorgiomariani94@gmail.com"},]
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E*"]

dependencies = [
    "numpy",
    "transformers",
    "huggingface_hub",
    "pandas",
    "datasets",
    "sentence-transformers",
    "nltk",
    "scipy",
    "click",
    "rouge",
    "llama-cpp-python",
    "OpenEXR",
]

[project.optional-dependencies]
blender = [
    "bpy==4.4.0"
]

dev = [
    "pre-commit",
    "black",
    "pytest",
]

[tool.setuptools]
packages = ["glue3d"]

[project.scripts]
glue3d = "glue3d.main:cli"
