[build-system]
requires = ["setuptools>=80", "setuptools-scm[simple]>=8"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "glue3d"
requires-python = ">= 3.10"
description = "Official project for GLUE3D."
authors = [{name="Giorgio Mariani", email="giorgiomariani94@gmail.com"},{name="Alessandro Raganato"},{ name="Simone Melzi"},{ name="Gabriella Pasi"}]
keywords = ["benchmark", "point cloud", "multimodal", "three-dimensional", "3d"]
readme = "assets/pypi_README.md"
license = "MIT"
license-files = ["LICEN[CS]E*"]

dependencies = [
    "numpy",
    "pandas",
    "transformers[accelerate]>=4.38.0",
    "huggingface_hub>=0.24.0",
    "datasets>=4.0.0",
    "sentence-transformers>=2.2.2",
    "nltk>=3.8.0",
    "scipy>=1.11.0",
    "click",
    "rouge>=1.0.1",
    "llama-cpp-python==0.3.9",
    "OpenEXR>=3.4.0",
]

[project.optional-dependencies]
blender = [
    "bpy==4.4.0"
]

dev = [
    "pre-commit",
    "black",
    "pytest>=6.0.0",
]

[tool.setuptools]
packages = ["glue3d"]

[project.scripts]
glue3d = "glue3d.main:cli"


[tool.pytest.ini_options]
testpaths = ["tests"]

[project.urls]
Homepage = "https://github.com/giorgio-mariani/GLUE3D"
Repository = "https://github.com/giorgio-mariani/GLUE3D"
Issues = "https://github.com/giorgio-mariani/GLUE3D/issues"
